# AudioSub

./: .gitignore  CMakeLists.txt  README.md  query
client/: CMakeLists.txt  audiosub_engine.cc  audiosub_engine.h  main.cc  peer_connection_client.cc  peer_connection_client.h  signaling_client.cc  signaling_client.h  wasapi_mic_capture.cc  wasapi_mic_capture.h
client/capi/: CMakeLists.txt  audiosub_capi.cc  audiosub_capi.h
docs/: collaboration-plan.md  current-implementation-flow.md  new-collaborator-setup.md  pipeline-deep-dive.md  team-message-template.md
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
include/asr/: null_asr_engine.h  whisper_cpp_engine.h
include/audio/: asr_audio_converter.h  asr_chunker.h  pass_through_audio_pipeline.h  pcm_ring_buffer.h
include/audiosub/asr/: null_asr_engine.h  whisper_asr_engine.h
include/audiosub/audio/: pass_through_audio_pipeline.h  pcm_ring_buffer.h  wav_writer.h
include/audiosub/core/: interfaces.h  types.h
include/core/: interfaces.h  types.h
include/fusion/: subtitle_mark_fuser.h
include/proto/: dc_message.h
scripts/: bootstrap.ps1  build.ps1  fetch-webrtc-sdk.ps1  pack-webrtc-sdk.ps1  test_stage1a.py  test_stage1b.py
signaling/: README.md  server.py
src/asr/: null_asr_engine.cc  whisper_asr_engine.cc  whisper_cpp_engine.cc
src/audio/: asr_audio_converter.cc  asr_chunker.cc  pass_through_audio_pipeline.cc  pcm_ring_buffer.cc  wav_writer.cc
